src-tauri/build_log_4.txt
   Compiling sqsh v0.1.0 (C:\Users\me\projects\sqsh\src-tauri)
warning: unused import: `PathBuf`
 --> src\lib.rs:6:23
  |
6 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0283]: type annotations needed for `FileOptions<'_, _>`
   --> src\lib.rs:92:9
    |
 92 |     let options = FileOptions::default().compression_method(zip::CompressionMethod::Stored);
    |         ^^^^^^^   ----------- type must be known at this point
    |
    = note: cannot satisfy `_: FileOptionExtension`
    = help: the following types implement trait `FileOptionExtension`:
              ()
              ExtendedFileOptions
note: required by a bound in `FileOptions`
   --> C:\Users\me\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zip-6.0.0\src\write.rs:268:31
    |
268 | pub struct FileOptions<'k, T: FileOptionExtension> {
    |                               ^^^^^^^^^^^^^^^^^^^ required by this bound in `FileOptions`
help: consider giving `options` an explicit type, where the type for type parameter `T` is specified
    |
 92 |     let options: FileOptions<'_, T> = FileOptions::default().compression_method(zip::CompressionMethod::Stored);
    |                ++++++++++++++++++++

warning: unused import: `image::GenericImageView`
 --> src\lib.rs:2:5
  |
2 | use image::GenericImageView;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0283`.
warning: `sqsh` (lib) generated 2 warnings
error: could not compile `sqsh` (lib) due to 1 previous error; 2 warnings emitted
